Fixed animation in 'button right' example by removing collapsed margin

--- a/static/example.scss
+++ b/static/example.scss
@@ -61,8 +61,7 @@ pre {
         }
 
         .jqtree-element {
-            margin-top: 4px;
-            margin-bottom: 4px;
+            margin-bottom: 8px;
             background-color: #ddd;
             padding: 8px;
 
